# to-the-moon

./: Justfile  README.md  art.py  camps_raw.tex  cardlatex.py  common.py  csv2postcard.py  events.py  events_raw.tex  makeArtAndCampsIndex.py  mise.toml  mk_art.py  mk_art_cars.py  mk_camps.py  mk_events.py  mk_fire_art.py  mk_keyfile.py  pyproject.toml  simple.py  themecamps.py
data/: sortdate.ipynb  to-the-moon-art.csv  to-the-moon-camps.csv
data/2024/: to-the-moon-events.csv
data/2026/consolidated/: camps.csv  camps_audit.csv  events.csv  events_audit.csv
data/2026/dust/: camps.csv  camps_forms.csv  events.csv  events_forms.csv
data/2026/forms/: camps.csv  events.csv  grotto_events.csv
data/2026/output/: camps_raw.tex  events_raw.tex
scripts/: consolidate_camps.py  consolidate_common.py  consolidate_events.py  convert_dust_camps_to_forms.py  convert_dust_events_to_forms.py
simple/: events.py  simple.py
