[project]
name = "to-the-moon"
version = "0.1.0"
description = "An open-source project related to the Burning Man regional burn."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mark Coletti", email = "mcoletti@gmail.com"},
    {name = "Andy Berres"}
]
dependencies = [
    "pandas>=1.0"
]

[project.urls]
Homepage = "https://github.com/markcoletti/to-the-moon"
Repository = "https://github.com/markcoletti/to-the-moon"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
